--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-screens": "~3.15.0",
+    "react-native-animatable": "^1.3.3",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.3.1",
-    "expo-image-picker": "~13.3.1"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
