--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,7 +21,8 @@
     "react-native-animatable": "^1.3.3",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "expo-linear-gradient": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
