--- a/my-app/app.json
+++ b/my-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "my-app",
+    "name": "Todo List",
     "slug": "my-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -18,16 +18,25 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "buildNumber": "1.0.0",
+      "supportsTablet": true,
+      "bundleIdentifier": "com.khanameer.todolist"
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.ameer_khan.todolist"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "6dc6d56f-b53d-45d9-bcb6-d4fd90e04ee9"
+      }
     }
   }
 }
